21th final edited

--- a/index.html
+++ b/index.html
@@ -235,9 +235,11 @@
                     <div class="swiper-wrapper">
                         <div class="image"></div>
                         <div class="txtbox">
-                            <p class="category"></p>
-                            <p class="description"></p>
-                            <button class="more">자세히 보기</button>
+                            <p class="category">신용대출</p>
+                            <p class="title">저렴한 금리로<br>여유로운 금융생활!<br><strong>파라솔 신용대출</strong></p>
+                            <p class="description">최대 1억원, 120개월 상환이 가능한 신용대출 상품입니다.<br>
+                                고객의 신용도에 따라 대출조건이 달라질 수 있습니다.</p>
+                            <button class="btn-blue">자세히 보기</button>
                             <ul>
                                 <li>
                                     <img src="./img/loan_list_icon_01.png" alt="대상 아이콘"><strong>대출대상자</strong>
