--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body oncontextmenu="return false" ondblclick="return false" ondrag="return false">
     <div id="skip">
         <ul>
             <li><a href="#header">메뉴로 바로가기</a></li>
