--- a/index.html
+++ b/index.html
@@ -266,7 +266,12 @@
                     </div>
                 </section>
                 <section id="savingsCarousels" class="swiper-slide">
-                    <div class="swiper-wrapper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    
+                  </div>
+                  <div class="swiper-slide"></div>
+                  <div class="swiper-slider"></div>
                     </div>
                 </section>
                 <section id="campaign" class="swiper-slide">
