edited aos-delay in html

--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
                             <div class="swiper-slide">
                                 <img src="./img/banner-01.png" alt="주배너1">
                                 <div class="txtbox">
-                                    <p ata-aos="fade-up" data-aos-duration="3000" data-aos-offset="0">당신의 내일을</p>
-                                    <p data-aos="fade-up" data-aos-duration="1000" data-aos-offset="0">
+                                    <p ata-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">당신의 내일을</p>
+                                    <p data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
                                         <strong>함께</strong>하는 금융
                                     </p>
-                                    <p data-aos="fade-up" data-aos-duration="2000" data-aos-offset="0">고객의 마음 속에 First,
+                                    <p data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">고객의 마음 속에 First,
                                         JT저축은행</p>
                                     <button>대출</button>
                                     <button>예금</button>
@@ -207,13 +207,13 @@
                             <div class="swiper-slide">
                                 <img src="./img/banner-02.png" alt="주배너2">
                                 <div class="txtbox">
-                                    <p data-aos-duration="2000" data-aos-delay="2000" data-aos-offset="1">더
+                                    <p data-aos-duration="2000" data-aos-delay="3000">더
                                         <strong>가깝게 </strong>다가가겠습니다.
                                     </p>
-                                    <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1500" data-aos-offset="1">더
+                                    <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="3000">더
                                         <strong>빠르게 </strong>다가가겠습니다.
                                     </p>
-                                    <p data-aos="fade-up" data-aos-duration="2000" data-aos-delay="1500" data-aos-offset="1">고객의 마음 속에 First,
+                                    <p data-aos="fade-up" data-aos-duration="2000" data-aos-delay="3000">고객의 마음 속에 First,
                                         JT저축은행</p>
                                     <button>대출</button>
                                     <button>예금</button>
