added href to buttons

--- a/index.html
+++ b/index.html
@@ -198,19 +198,11 @@
                             <div class="swiper-slide">
                                 <img src="./img/banner-01.png" alt="주배너1">
                                 <div class="txtbox">
-<<<<<<< HEAD
-                                    <p ata-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">당신의 내일을</p>
-                                    <p data-aos="fade-up" data-aos-duration="2000"  data-aos-delay="600">
+                                    <p ata-aos="fade-up" data-aos-duration="2500" data-aos-delay="500">당신의 내일을</p>
+                                    <p data-aos="fade-up" data-aos-duration="2500"  data-aos-delay="600">
                                         <strong>함께</strong>하는 금융
                                     </p>
-                                    <p data-aos="fade-up" data-aos-duration="2000"  data-aos-delay="700">고객의 마음 속에 First,
-=======
-                                    <p ata-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">당신의 내일을</p>
-                                    <p data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
-                                        <strong>함께</strong>하는 금융
-                                    </p>
-                                    <p data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">고객의 마음 속에 First,
->>>>>>> 1879302f88c47f2c83597b0aa200478e51382012
+                                    <p data-aos="fade-up" data-aos-duration="2500"  data-aos-delay="700">고객의 마음 속에 First,
                                         JT저축은행</p>
                                     <button>대출</button>
                                     <button>예금</button>
@@ -219,7 +211,6 @@
                             <div class="swiper-slide">
                                 <img src="./img/banner-02.png" alt="주배너2">
                                 <div class="txtbox">
-<<<<<<< HEAD
                                     <p data-aos-duration="3000" data-aos-delay="2000">더
                                         <strong>가깝게 </strong>다가가겠습니다.
                                     </p>
@@ -227,15 +218,6 @@
                                         <strong>빠르게 </strong>다가가겠습니다.
                                     </p>
                                     <p data-aos="fade-up" data-aos-duration="3000" data-aos-delay="1500">고객의 마음 속에 First,
-=======
-                                    <p data-aos-duration="2000" data-aos-delay="3000">더
-                                        <strong>가깝게 </strong>다가가겠습니다.
-                                    </p>
-                                    <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="3000">더
-                                        <strong>빠르게 </strong>다가가겠습니다.
-                                    </p>
-                                    <p data-aos="fade-up" data-aos-duration="2000" data-aos-delay="3000">고객의 마음 속에 First,
->>>>>>> 1879302f88c47f2c83597b0aa200478e51382012
                                         JT저축은행</p>
                                     <button>대출</button>
                                     <button>예금</button>
@@ -251,8 +233,8 @@
                                 <p>JT저축은행<strong>APP 다운받기</strong></p>
                             </div>
                             <ul>
-                                <li><button><img src="./img/Google_Play_icon.png" alt="구글 플레이"></button></li>
-                                <li><button><img src="./img/App_Store_icon.png" alt="애플 스토어"></button></li>
+                                <li><button onclick="location.href='https://play.google.com/store/apps/details?id=kr.co.jtbank.app'"><img src="./img/Google_Play_icon.png" alt="구글 플레이"></button></li>
+                                <li><button onclick="location.href='https://apps.apple.com/us/app/id1514708860'"><img src="./img/App_Store_icon.png" alt="애플 스토어"></button></li>
                             </ul>
                         </div>
                     </div>
@@ -360,8 +342,9 @@
                     </div>
                     <div class="image"></div>
                   </div>
-                    <div class="swiper-button-next2"></div>
-                    <div class="swiper-button-prev2"></div>
+                </div>
+                    <div class="swiper-button-next2"><span></span></div>
+                    <div class="swiper-button-prev2"><span></span></div>
                     <div class="swiper-pagination1"></div>
                 </section>
                 <section id="campaign" class="swiper-slide">
