--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
                             <div class="swiper-slide">
                                 <img src="./img/banner-01.png" alt="주배너1">
                                 <div class="txtbox">
-                                    <p ata-aos="fade-up" data-aos-duration="2500" data-aos-delay="500">당신의 내일을</p>
-                                    <p data-aos="fade-up" data-aos-duration="2500"  data-aos-delay="600">
+                                    <p data-aos="fade-up">당신의 내일을</p>
+                                    <p data-aos="fade-up">
                                         <strong>함께</strong>하는 금융
                                     </p>
-                                    <p data-aos="fade-up" data-aos-duration="2500"  data-aos-delay="700">고객의 마음 속에 First,
+                                    <p data-aos="fade-up">고객의 마음 속에 First,
                                         JT저축은행</p>
                                     <button>대출</button>
                                     <button>예금</button>
@@ -276,8 +276,8 @@
                   <div class="swiper-slide deposit">
                     <div class="contents txtbox">
                         <p class="category"  ata-aos="fade-up" data-aos-duration="3000">목돈모으기</p>
-                        <p class="title" ata-aos="fade-up" data-aos-duration="2000">종자돈을 만들 수 있는<br>가장 효과적인 방법<br><strong>정기적금</strong></p>
-                        <p class="description" ata-aos="fade-up" data-aos-duration="2000">매월 일정금액을 정기적으로 납입하여 만기일에 목돈을<br>수령할 수 있는 목돈만들기용 적립식예금의 대표상품입니다.</p>
+                        <p class="title" ata-aos="fade-up" data-aos-duration="3000">종자돈을 만들 수 있는<br>가장 효과적인 방법<br><strong>정기적금</strong></p>
+                        <p class="description" ata-aos="fade-up" data-aos-duration="3000">매월 일정금액을 정기적으로 납입하여 만기일에 목돈을<br>수령할 수 있는 목돈만들기용 적립식예금의 대표상품입니다.</p>
                         <button class="btn-blue">자세히 보기</button>
                         <ul>
                             <li>
@@ -343,8 +343,8 @@
                     <div class="image"></div>
                   </div>
                 </div>
-                    <div class="swiper-button-next2"><span></span></div>
-                    <div class="swiper-button-prev2"><span></span></div>
+                    <div class="swiper-button-next"><i class="fa-solid fa-angle-right"></i></div>
+                    <div class="swiper-button-prev"><i class="fa-solid fa-angle-left"></i></div>
                     <div class="swiper-pagination1"></div>
                 </section>
                 <section id="campaign" class="swiper-slide">
